# data-platform-challenge

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/steeleye/: __init__.py  downloader.py  main.py  parser.py  storage.py  transformer.py
tests/: test_init.py
tests/integration_tests/: test_main_integration.py
tests/unit_tests/: test_downloader.py  test_init.py  test_main_unit.py  test_parser.py  test_storage.py  test_transformer.py
