[project]
name = "steeleye-assessment"
version = "0.1.0"
description = "SteelEye Data Engineer Technical Assessment"
authors = [{ name = "Shaswat Pandey", email = "shaswatp19@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "requests>=2.31",
    "fsspec>=2024.3",
    "s3fs>=2024.3",
    "adlfs>=2024.2",
    "lxml>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "types-requests>=2.31",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/steeleye"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"